tests/rosetta/out/Rust/averages-mean-time-of-day.error
rustc: exit status 1
error[E0434]: can't capture dynamic environment in a fn item
   --> /tmp/averages-mean-time-of-day.rs:106:43
    |
106 |         println!("{}", vec![format!("{}", meanTime(inputs))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    |                                           ^^^^^^^^
    |
    = help: use the `|| { ... }` closure form instead

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/averages-mean-time-of-day.rs:98:24
   |
98 |         let si = total.parse::<i32>().unwrap();
   |                        ^^^^^ method not found in `f64`

error[E0308]: mismatched types
   --> /tmp/averages-mean-time-of-day.rs:102:16
    |
81  |     let meanTime = move |times: Vec<&'static str>| -> &'static str {
    |                                                       ------------ expected `&str` because of return type
...
102 |         return format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", pad(h), ":"), pad(m)), ":"), pad(s));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
    |
    = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
 --> /tmp/averages-mean-time-of-day.rs:9:49
  |
9 |             let denom = ((2 * n) * (2 * n + 1)).parse::<f64>().unwrap();
  |                                                 ^^^^^

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/averages-mean-time-of-day.rs:21:49
   |
21 |             let denom = ((2 * n - 1) * (2 * n)).parse::<f64>().unwrap();
   |                                                 ^^^^^

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:59:40
   |
59 |             if &digits[i as usize..i + 1 as usize] == ch {
   |                                        ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:59:36
   |
59 |             if &digits[i as usize..i + 1 as usize] == ch {
   |                                    ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/averages-mean-time-of-day.rs:59:38
   |
59 |             if &digits[i as usize..i + 1 as usize] == ch {
   |                                      ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:67:45
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                             ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:67:39
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                       ^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/averages-mean-time-of-day.rs:67:43
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                           ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:67:80
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                                                                ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/averages-mean-time-of-day.rs:67:78
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                                                              ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:67:98
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                                                                                  ^^^^^^^^^^ expected `i32`, found `usize`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/averages-mean-time-of-day.rs:67:96
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                                                                                ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0277]: the type `str` cannot be indexed by `std::ops::Range<i32>`
  --> /tmp/averages-mean-time-of-day.rs:67:74
   |
67 |         return digit(&s[idx as usize..idx + 1 as usize]) * 10 + digit(&s[idx + 1 as usize..idx + 2 as usize]);
   |                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string indices are ranges of `usize`
   |
   = help: the trait `SliceIndex<str>` is not implemented for `std::ops::Range<i32>`
   = help: the following other types implement trait `SliceIndex<T>`:
             `std::ops::Range<usize>` implements `SliceIndex<[T]>`
             `std::ops::Range<usize>` implements `SliceIndex<str>`
   = note: required for `str` to implement `Index<std::ops::Range<i32>>`

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/averages-mean-time-of-day.rs:73:42
   |
73 |         return ((h * 60 + m) * 60 + sec).parse::<f64>().unwrap();
   |                                          ^^^^^ method not found in `i32`

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:77:20
   |
75 |     fn pad(n: i32) -> &'static str {
   |                       ------------ expected `&str` because of return type
76 |         if n < 10 {
77 |             return format!("{}{}", "0", n.to_string());
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> /tmp/averages-mean-time-of-day.rs:79:16
   |
75 |     fn pad(n: i32) -> &'static str {
   |                       ------------ expected `&'static str` because of return type
...
79 |         return n.to_string();
   |                ^^^^^^^^^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
79 |         return &n.to_string();
   |                +

error: aborting due to 19 previous errors

Some errors have detailed explanations: E0277, E0308, E0434, E0599, E0689.
For more information about an error, try `rustc --explain E0277`.
